--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-load-script",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "react-load-script enables you to easily create components which depend on third party JS scripts",
   "main": "lib/index.js",
   "author": "Blueberry",
@@ -14,7 +14,7 @@
     "clean": "rimraf lib",
     "lint": "eslint ./src/*",
     "test": "jest",
-    "prepublish": "npm run lint && npm run test"
+    "prepublish": "npm run lint && npm run test && npm run build"
   },
   "keywords": [
     "react",
@@ -28,25 +28,28 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.24.1",
-    "enzyme": "^2.8.2",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-plugin-transform-runtime": "6.6.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-1": "6.24.1",
+    "enzyme": "2.8.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "jest": "^19.0.2",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
-    "rimraf": "^2.4.3"
+    "jest": "19.0.2",
+    "prop-types": "15.5.8",
+    "react": "15.5.4",
+    "react-addons-test-utils": "15.5.1",
+    "react-dom": "15.5.4",
+    "rimraf": "2.4.3"
   },
   "dependencies": {
-    "invariant": "^2.2.2",
-    "prop-types": "^15.5.8",
-    "react": ">=0.14.2"
+  },
+  "peerDependencies": {
+    "react": ">=0.14.9",
+    "prop-types": ">=15"
   }
 }
