FIX test dependencies

--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "prop-types": "15.5.8",
     "react": "15.5.4",
     "react-addons-test-utils": "15.5.1",
-    "react-dom": "15.5.4",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.6.1",
     "rimraf": "2.4.3"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=0.14.9",
     "prop-types": ">=15"
