--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf lib",
     "lint": "eslint ./src/*",
     "test": "jest",
-    "prepublish": "npm run lint && npm run test && npm run build"
+    "prepublish": "yarn lint && yarn test && yarn build"
   },
   "keywords": [
     "react",
@@ -46,10 +46,9 @@
     "react-dom": "15.5.4",
     "rimraf": "2.4.3"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "react": ">=0.14.9",
-    "prop-types": ">=15"
+    "prop-types": ">=15",
+    "react": ">=0.14.9"
   }
 }
