--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "jest": "19.0.2",
     "prop-types": "15.5.8",
     "react": "15.5.4",
-    "react-addons-test-utils": "15.5.1",
     "react-dom": "15.5.4",
+    "react-test-renderer": "^15.6.1",
     "rimraf": "2.4.3"
   },
   "dependencies": {},
